# algorithms-and-data-structures

lab_2/: CMakeLists.txt  main.cpp
lab_2/helper/: random.h
lab_2/lib/: iterator.cpp  iterator.h  list.cpp  list.h  node.cpp  queue.cpp  queue.h  stack.h  tab_stack.cpp  tab_stack.h
lab_3/: CMakeLists.txt  main.cpp
lab_3/helper/: random.cpp
lab_3/lib/: list.h  queue.cpp  queue.h  stack.h
lab_4/: main.cpp
lab_4/lib/: node.h  stack.cpp  stack.h
lab_5/: CMakeLists.txt  main.cpp
lab_5/helper/: range.cpp  range.h
lab_5/lib/: BST.cpp  BST.h  timer.cpp  timer.h
lab_7/: CMakeLists.txt  main.cpp
lab_7/helper/: random.cpp  timer.cpp  timer.h
lab_7/lib/: sort.cpp  sort.h
lab_8/: CMakeLists.txt
lab_8/entity/: patient.cpp  patient.h
lab_8/helper/: add_source.cpp  add_source.h
lab_8/lib/: sort.cpp  sort.h
lab_9/: CMakeLists.txt  main.cpp
lab_9/helper/: random.h  timer.cpp  timer.h
